--- a/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/_GridViewPartial_solicitud_vacaciones_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/RRHH/Views/Vacaciones/_GridViewPartial_solicitud_vacaciones_det.cshtml
@@ -1,8 +1,8 @@
 @using System.Web.UI.WebControls;
 @{
     var grid = Html.DevExpress().GridView(settings => {
-        settings.Name = "GridView_solicitud_vacaciones";
-        settings.CallbackRouteValues = new { Controller = "Vacaciones", Action = "GridViewPartial_solicitud_vacaciones", Fecha_ini = ViewBag.fecha_ini, Fecha_fin = ViewBag.fecha_fin };
+        settings.Name = "GridViewPartial_solicitud_vacaciones_det";
+        settings.CallbackRouteValues = new { Controller = "Vacaciones", Action = "GridViewPartial_solicitud_vacaciones_det"};
 
         settings.Width = Unit.Percentage(100);
         settings.KeyFieldName = "IdSolicitud";
@@ -37,68 +37,16 @@
 
         settings.SettingsExport.EnableClientSideExportAPI = true;
         settings.SettingsExport.ExcelExportMode = DevExpress.Export.ExportType.WYSIWYG;
-        settings.Toolbars.Add(t =>
-        {
-            t.EnableAdaptivity = true;
-            t.Items.Add(GridViewToolbarCommand.ExportToPdf).Text = "Exportar a PDF";
-            t.Items.Add(GridViewToolbarCommand.ExportToXls).Text = "Exportar a XLS";
-            t.Items.Add(GridViewToolbarCommand.ExportToXlsx).Text = "Exportar a XLSX";
-            t.Items.Add(GridViewToolbarCommand.ExportToDocx).Text = "Exportar a DOCX";
-            t.Items.Add(GridViewToolbarCommand.ExportToRtf).Text = "Exportar a RTF";
-            t.Items.Add(GridViewToolbarCommand.ExportToCsv).Text = "Exportar a CSV";
-        });
-        settings.SettingsExport.RenderBrick = (sender, e) =>
-        {
-            if (e.RowType == GridViewRowType.Data && e.VisibleIndex % 2 == 0)
-                e.BrickStyle.BackColor = System.Drawing.Color.FromArgb(0xEE, 0xEE, 0xEE);
-        };
-        settings.HtmlRowPrepared = (s, e) =>
-        {
-            if (Convert.ToString(e.GetValue("Estado")) == "I")
-            {
-                e.Row.ForeColor = System.Drawing.Color.Red;
-            }
+        
 
+       
 
-        };
-        settings.Columns.Add(c =>
-        {
-            c.Caption = "#";
-            c.Width = Unit.Percentage(5);
-            c.SetDataItemTemplateContent(tc =>
-            {
-                if (Convert.ToString(DataBinder.Eval(tc.DataItem, "Estado")) == "A"
-                 && ( Convert.ToInt32(DataBinder.Eval(tc.DataItem, "IdLiquidacion"))==0) )
-                {
-                    ViewContext.Writer.Write(
-                         Html.ActionLink("Modificar", "Modificar", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpleado"), IdSolicitud = DataBinder.Eval(tc.DataItem, "IdSolicitud") }) + "&nbsp;" +
-                         Html.ActionLink("Anular", "Anular", new { IdEmpleado = DataBinder.Eval(tc.DataItem, "IdEmpleado"), IdSolicitud = DataBinder.Eval(tc.DataItem, "IdSolicitud") },
-                            new { onclick = "return confirm('¿Está seguro de que desea anular el registro?')" })
-                    );
-                }
-
-            });
-            c.SetHeaderTemplateContent(tc =>
-            {
-                ViewContext.Writer.Write(
-                    Html.ActionLink("Nuevo", "Nuevo").ToHtmlString() + "&nbsp;" + "&nbsp;"
-
-                    );
-
-            });
-            c.Settings.AllowDragDrop = DefaultBoolean.False;
-            c.Settings.AllowSort = DefaultBoolean.False;
-            c.Width = Unit.Percentage(15);
-        });
-
-
-        settings.Columns.Add("IdSolicitud","ID").Width = Unit.Percentage(5);
-        settings.Columns.Add("pe_nombre_completo","Empleado").Width=Unit.Percentage(25);
-        settings.Columns.Add("Fecha");
+        settings.Columns.Add("IdPeriodo_Inicio", "Periodo inicio").Width = System.Web.UI.WebControls.Unit.Percentage(10);
+        settings.Columns.Add("IdPeriodo_Fin", "Periodo hasta").Width = System.Web.UI.WebControls.Unit.Percentage(10);
         settings.Columns.Add(column =>
         {
-            column.FieldName = "Fecha";
-            column.Caption = "Solicitud";
+            column.FieldName = "FechaIni";
+            column.Caption = "Fecha inicio";
             column.Width = Unit.Percentage(10);
             column.PropertiesEdit.DisplayFormatString = "d";
             column.EditorProperties().DateEdit(sp =>
@@ -108,11 +56,12 @@
             });
         });
 
+
         settings.Columns.Add(column =>
         {
-            column.FieldName = "Fecha_Desde";
-            column.Caption = "Desde";
-            column.Width = Unit.Percentage(11);
+            column.FieldName = "FechaFin";
+            column.Caption = "Fecha hasta";
+            column.Width = Unit.Percentage(10);
             column.PropertiesEdit.DisplayFormatString = "d";
             column.EditorProperties().DateEdit(sp =>
             {
@@ -120,70 +69,8 @@
                 sp.Width = Unit.Percentage(100);
             });
         });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "Fecha_Hasta";
-            column.Caption = "Hasta";
-            column.Width = Unit.Percentage(11);
-            column.PropertiesEdit.DisplayFormatString = "d";
-            column.EditorProperties().DateEdit(sp =>
-            {
-                column.PropertiesEdit.DisplayFormatString = "d";
-                sp.Width = Unit.Percentage(100);
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "Fecha_Retorno";
-            column.Caption = "Retorna";
-            column.Width = Unit.Percentage(11);
-            column.PropertiesEdit.DisplayFormatString = "d";
-            column.EditorProperties().DateEdit(sp =>
-            {
-                column.PropertiesEdit.DisplayFormatString = "d";
-                sp.Width = Unit.Percentage(100);
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.FieldName = "EstadoBool";
-            column.Caption = "Estado";
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(5);
-            column.EditorProperties().CheckBox(sp =>
-            {
-
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.Caption = "#";
-            column.Width = Unit.Pixel(100);
-            column.SetDataItemTemplateContent(container =>
-            {
-
-                if (Convert.ToString(DataBinder.Eval(container.DataItem, "Estado")) == "A" && Convert.ToInt32(DataBinder.Eval(container.DataItem, "IdLiquidacion")) == 0)
-                {
-
-
-                    Html.DevExpress().HyperLink(hyperlink =>
-                    {
-                        var IdEmpleado = DataBinder.Eval(container.DataItem, "IdEmpleado");
-                        var IdSolicitud = DataBinder.Eval(container.DataItem, "IdSolicitud");
-                        hyperlink.Properties.Text = "Liquidar";
-                        hyperlink.NavigateUrl = Url.Action("Nuevo", "LiquidacionVacaciones", new { Area = "RRHH", IdEmpleado = IdEmpleado, IdSolicitud = IdSolicitud});
-                    }).Render();
-                }
-
-            });
-        });
-        settings.Columns.Add(column =>
-        {
-            column.SetDataItemTemplateContent(c =>
-            {
-                ViewContext.Writer.Write("<span class=\"glyphicon  glyphicon-print\" onclick=\"OpenInNewTabWinBrowser('" + Url.Action("ROL_007", "RRHHReportes", new { Area = "Reportes", IdEmpleado= DataBinder.Eval(c.DataItem, "IdEmpleado"), IdSolicitud = DataBinder.Eval(c.DataItem, "IdSolicitud") }, Request.Url.Scheme) + "');\"></span>");
-            });
-            column.Width = System.Web.UI.WebControls.Unit.Percentage(4);
-        });
+        settings.Columns.Add("DiasGanado", "Días ganado").Width = System.Web.UI.WebControls.Unit.Percentage(20);
+        settings.Columns.Add("DiasTomados", "Días gozado").Width = System.Web.UI.WebControls.Unit.Percentage(20);
 
     });
 }
