--- a/ERP/Core.Erp.Web/Views/Account/CambiarContrasena.cshtml
+++ b/ERP/Core.Erp.Web/Views/Account/CambiarContrasena.cshtml
@@ -46,7 +46,8 @@
         }
         <div class="login-box">
             <div class="login-logo">
-                <a href="#"><b>Fixed</b>ERP</a>
+                @*<a href="#"><b>Fixed</b>ERP</a>*@
+                <img src="~/AdminLTE/dist/img/logo.png">  
             </div>
             <!-- /.login-logo -->
             <div class="login-box-body">
@@ -65,7 +66,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-6">
-                        <button type="submit" class="btn btn-primary btn-block btn-flat">Aceptar</button>
+                        <button type="submit" class="btn btn-primary btn-block">Aceptar</button>
                     </div>
                 </div>
 
