--- a/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Anular.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Inventario/Views/EgresoInventario/Anular.cshtml
@@ -104,7 +104,17 @@
             </div>
         </div>
     </div>
-
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-12">
+                <div class="form-group">
+                    <label for="IdResponsable">Responsable</label>
+                    @Html.Partial("_CmbPersona_EgresoInv", Model.IdResponsable)
+                    @Html.ValidationMessageFor(q => q.IdResponsable, "", new { @class = "text-danger" })
+                </div>
+            </div>
+        </div>
+    </div>
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-12">
